kubernetes/hapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monitor-hapi
  name: monitor-hapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-hapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monitor-hapi
    spec:
      containers:
      - image: ${DOCKER_REGISTRY}/${IMAGE_NAME_HAPI}:${VERSION}
        imagePullPolicy: "Always"
        name: "monitor-hapi"
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /usr/app
          name: hapi
          subPathExpr: $(CODE_DIRECTORY)
      restartPolicy: Always
      volumes:
      - name: hapi
        nfs:
          server: nfs-server-new
          path: /home/ubuntu/
