kubernetes/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monitor-hasura
  name: monitor-hasura
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-hasura
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monitor-hasura
    spec:
      containers:
        - args:
            - graphql-engine
            - serve
            - --enable-console
          image: hasura/graphql-engine:v1.2.1.cli-migrations-v2
          imagePullPolicy: "Always"
          name: "monitor-hasura"
          imagePullSecrets:
            - name: regcred
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /hasura-migrations
              name: monitor-hasura1
              subPathExpr: $(MIGRATION_DIRECTORY)
            - mountPath: /hasura-metadata
              name: monitor-hasura2
              subPathExpr: $(METADATA_DIRECTORY)
      restartPolicy: Always
      volumes:
        - name: monitor-hasura1
          nfs:
            server: nfs-server-new
            path: /home/ubuntu
        - name: monitor-hasura2
          nfs:
            server: nfs-server-new
            path: /home/ubuntu
