kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monitor-postgres
  name: monitor-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monitor-postgres
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: postgres:11.5-alpine
          imagePullPolicy: "Always"
          name: monitor-postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres
              subPathExpr: $(DATABASE_DIRECTORY)
      restartPolicy: Always
      volumes:
        - name: postgres
          nfs:
            server: nfs-server-new
            path: /mnt/
