kubernetes/wallet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wallet
  name: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wallet
    spec:
      containers:
      - image: eoscostarica506/wallet
        imagePullPolicy: "IfNotPresent"
        name: "wallet"
        ports:
        - containerPort: 8888
        volumeMounts:
        - mountPath: /opt/application/data
          name: wallet
          subPathExpr: $(WALLET_DIRECTORY)
        - mountPath: /opt/application/config
          name: config-volume
      restartPolicy: Always
      volumes:
      - name: config-volume
        configMap:
          name:  wallet-config
      - name: wallet
        nfs:
          server: nfs-server-new
          path: /mnt/
