kubernetes/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapp
  template:
    metadata:
      labels:
        io.kompose.network/default: "true"
        io.kompose.service: webapp
    spec:
      containers:
      - image: eoscostarica506/eoscr-webapp:latest
        imagePullPolicy: ""
        name: eoscr-webapp
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/ssl-certs
          name: secret-volume
        - mountPath: /etc/nginx/conf.d
          name: configmap-volume
      restartPolicy: Always
      volumes:
        - name: secret-volume
          secret:
             secretName: eoscr-webapp.keys
        - name: configmap-volume
          configMap:
            name:  eoscr-webapp.conf
