kubernetes/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: monitor-hasura
  name: monitor-hasura
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: monitor-hasura
