kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitor-postgres
  name: monitor-postgres
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: monitor-postgres
