kubernetes/wallet-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: wallet
  name: wallet
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    io.kompose.service: wallet
