kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monitor-webapp
  name: monitor-webapp
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  selector:
    app: monitor-webapp
