kubernetes/airwire.ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`${INGRESS_AIRWIRE_HOST}`)
    services:
    - kind: Service
      name: dashboard-webapp
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`${INGRESS_AIRWIRE_HOST}`)
    services:
    - kind: Service
      name: dashboard-webapp
      port: 80
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hasura-http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`${INGRESS_AIRWIRE_GRAPHQL_HOST}`)
    services:
    - kind: Service
      name: dashboard-hasura
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hasura-https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`${INGRESS_AIRWIRE_GRAPHQL_HOST}`)
    services:
    - kind: Service
      name: dashboard-hasura
      port: 8080
  tls:
    certResolver: myresolver
